@@ -9,10 +9,11 @@ plugins {
 application {
 	mainClass = 'com.meshtastic.client.MeshAppLauncher'
 	def jvmArgs = [
-		'-Xmx256m',
-		'-Xms256m',
+//		'-Xmx256m',
+//		'-Xms256m',
 //		'-Dprism.order=sw',
 		'--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+		'--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
 		'--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
 		'--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
 		'--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
@@ -53,7 +54,7 @@ repositories {
 dependencies {
 	implementation 'com.google.protobuf:protobuf-java:4.33.4'
 	implementation 'com.miglayout:miglayout-javafx:11.4.2'
-	implementation 'ch.qos.logback:logback-classic:1.5.16'
+	implementation 'ch.qos.logback:logback-classic:1.5.32'
 	implementation 'com.fazecast:jSerialComm:2.11.0'
 	implementation 'com.google.code.gson:gson:2.11.0'
 	implementation 'com.h2database:h2:2.3.232'
